test/expected/large/credentials/VirtualService.yaml
---
apiVersion: networking.istio.io/v1alpha3
kind: VirtualService
metadata:
  annotations:
    foo.com/duname: credentials
    foo.com/duversion: 1.20.0-20190918.1568830153329
    foo.com/version: 1.20.0
  labels:
    app.kubernetes.io/name: credentials
    helm.sh/chart: credentials-1.20.0
  name: credentials
spec:
  gateways:
  - public-gateway
  hosts:
  - '*'
  http:
  - match:
    - uri:
        exact: /credentials
    - uri:
        prefix: /credentials/
    route:
    - destination:
        host: credentials.peekay.svc.cluster.local
